# genuine-grads

./: .gitignore  INSTALLATION_GUIDE.md  LICENSE.md  README.md  USER_GUIDE.md
apps/: .env.production  .env.production.example  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  NOTIFICATION_SYSTEM_PLAN.md  ONCHAIN_INTEGRATION_COMPLETE.md  deploy.sh  docker-compose.yml  init-db.sql  init-ssl.sh  nginx.conf
apps/backend/: Dockerfile  README.md  check-ipfs-uri.sql  create-super-admin.sql  package.json  tsconfig.json
apps/backend/docs/: API_EXAMPLES.md  AUTOMATIC_PROVISIONING_UPDATE.md  DATABASE_PROVISIONING.md  DEPLOYMENT.md  ENV_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  TROUBLESHOOTING.md
apps/frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js  test-session.js  tsconfig.json
apps/program/genuinegrads/programs/genuinegrads/: Cargo.toml
apps/program/genuinegrads/programs/genuinegrads/src/: errors.rs  events.rs  lib.rs  utils.rs
apps/program/genuinegrads/programs/genuinegrads/src/instructions/: approve_university.rs  burn_certificate_v2.rs  create_core_collection_v2_cpi.rs  create_tree_v2.rs  deactivate_university.rs  initialize_config.rs  mint_certificate_v2.rs  mod.rs  register_university.rs  set_non_transferable_v2.rs  update_university.rs
apps/program/genuinegrads/programs/genuinegrads/src/states/: global_config.rs  mod.rs  university.rs  university_collection.rs  university_tree.rs
apps/zk-service/: README.md  package-lock.json  package.json
backend/: package.json
(+275 files in other folders)
