[package]
name = "genuinegrads"
version = "0.1.0"
description = "GenuineGrads Solana Program for credential management with compressed NFTs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "genuinegrads"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "mpl-account-compression/idl-build","anchor-spl/idl-build","spl-account-compression/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
mpl-bubblegum = "2.1.1"
spl-account-compression = {version = "1.0.0", features = ["cpi", "no-entrypoint"]}
mpl-account-compression = { version = "1.0.0", features = ["cpi"] }
mpl-noop = { version = "1.0.0", features = ["no-entrypoint"] }
use = "0.0.1-pre.0"
mpl-core = "0.11.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
